// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<nav
  className="sc-fubCfw bCQhlU Sidebar-resources"
>
  <div
    className="sc-pFZIQ"
  >
    <div>
      <div
        className="sc-fFubgz hIGdYH"
      >
        
      </div>
      <ul
        className="sc-bkzZxe jjCdaj"
      >
        <li
          className="sc-bdfBwQ sc-dQppl fKFkSC cvRQvE"
        >
          <a
            className="sc-jrAGrp sc-kEjbxe bcHXUh fOSgZM isSelected"
            href="/"
            onClick={[Function]}
          >
            <div
              className="sc-gsTCUz iZQOBB isNone"
            >
              <span
                className="sc-dlfnbm jAGXAl"
              >
                7
              </span>
            </div>
            <div
              className="sc-bqyKva sc-kstrdz dHnJEw elihkm"
            >
              <span
                className="sc-hBEYos jsLRUj"
              >
                All
              </span>
            </div>
          </a>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fFubgz hIGdYH"
      >
        resources
      </div>
      <ul
        className="sc-bkzZxe jjCdaj"
      >
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-jSgupP bujtng"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCssSg hOYBLG"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-jrAGrp bcHXUh  isBuilding"
            href="/r/resource4"
            onClick={[Function]}
            title="resource4"
          >
            <div
              className="sc-iqHYGH bHnIUA"
            >
              <div
                className="sc-gsTCUz iZQOBB isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-bqyKva sc-kstrdz dHnJEw elihkm"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  resource4
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:36:03.000Z"
                  title="2017-12-21T15:36:03.000Z"
                >
                  &lt;5s ago
                </time>
              </span>
              <button
                className="sc-iBPRYJ duoIAk SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-crrsfI bEhhkd"
            >
              <div
                className="sc-gsTCUz iZQOBB isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <div
                className="sc-bqyKva dHnJEw"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-jSgupP bujtng"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCssSg hOYBLG"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-jrAGrp bcHXUh  isBuilding"
            href="/r/resource9"
            onClick={[Function]}
            title="resource9"
          >
            <div
              className="sc-iqHYGH bHnIUA"
            >
              <div
                className="sc-gsTCUz iZQOBB isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-bqyKva sc-kstrdz dHnJEw elihkm"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  resource9
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:35:58.000Z"
                  title="2017-12-21T15:35:58.000Z"
                >
                  &lt;15s ago
                </time>
              </span>
              <button
                className="sc-iBPRYJ duoIAk SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-crrsfI bEhhkd"
            >
              <div
                className="sc-gsTCUz iZQOBB isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <div
                className="sc-bqyKva dHnJEw"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-jSgupP bujtng"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCssSg hOYBLG"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-jrAGrp bcHXUh  isBuilding"
            href="/r/resource19"
            onClick={[Function]}
            title="resource19"
          >
            <div
              className="sc-iqHYGH bHnIUA"
            >
              <div
                className="sc-gsTCUz iZQOBB isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-bqyKva sc-kstrdz dHnJEw elihkm"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  resource19
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:35:48.000Z"
                  title="2017-12-21T15:35:48.000Z"
                >
                  &lt;30s ago
                </time>
              </span>
              <button
                className="sc-iBPRYJ duoIAk SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-crrsfI bEhhkd"
            >
              <div
                className="sc-gsTCUz iZQOBB isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <div
                className="sc-bqyKva dHnJEw"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-jSgupP bujtng"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCssSg hOYBLG"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-jrAGrp bcHXUh  isBuilding"
            href="/r/resource29"
            onClick={[Function]}
            title="resource29"
          >
            <div
              className="sc-iqHYGH bHnIUA"
            >
              <div
                className="sc-gsTCUz iZQOBB isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-bqyKva sc-kstrdz dHnJEw elihkm"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  resource29
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:35:38.000Z"
                  title="2017-12-21T15:35:38.000Z"
                >
                  &lt;30s ago
                </time>
              </span>
              <button
                className="sc-iBPRYJ duoIAk SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-crrsfI bEhhkd"
            >
              <div
                className="sc-gsTCUz iZQOBB isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <div
                className="sc-bqyKva dHnJEw"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-jSgupP bujtng"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCssSg hOYBLG"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-jrAGrp bcHXUh  isBuilding"
            href="/r/resource39"
            onClick={[Function]}
            title="resource39"
          >
            <div
              className="sc-iqHYGH bHnIUA"
            >
              <div
                className="sc-gsTCUz iZQOBB isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-bqyKva sc-kstrdz dHnJEw elihkm"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  resource39
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:35:28.000Z"
                  title="2017-12-21T15:35:28.000Z"
                >
                  &lt;45s ago
                </time>
              </span>
              <button
                className="sc-iBPRYJ duoIAk SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-crrsfI bEhhkd"
            >
              <div
                className="sc-gsTCUz iZQOBB isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <div
                className="sc-bqyKva dHnJEw"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-jSgupP bujtng"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCssSg hOYBLG"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-jrAGrp bcHXUh  isBuilding"
            href="/r/resource49"
            onClick={[Function]}
            title="resource49"
          >
            <div
              className="sc-iqHYGH bHnIUA"
            >
              <div
                className="sc-gsTCUz iZQOBB isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-bqyKva sc-kstrdz dHnJEw elihkm"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  resource49
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:35:18.000Z"
                  title="2017-12-21T15:35:18.000Z"
                >
                  &lt;1m ago
                </time>
              </span>
              <button
                className="sc-iBPRYJ duoIAk SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-crrsfI bEhhkd"
            >
              <div
                className="sc-gsTCUz iZQOBB isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <div
                className="sc-bqyKva dHnJEw"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-jSgupP bujtng"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCssSg hOYBLG"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-jrAGrp bcHXUh  isBuilding"
            href="/r/resource54"
            onClick={[Function]}
            title="resource54"
          >
            <div
              className="sc-iqHYGH bHnIUA"
            >
              <div
                className="sc-gsTCUz iZQOBB isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-bqyKva sc-kstrdz dHnJEw elihkm"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  resource54
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:35:13.000Z"
                  title="2017-12-21T15:35:13.000Z"
                >
                  &lt;1m ago
                </time>
              </span>
              <button
                className="sc-iBPRYJ duoIAk SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-crrsfI bEhhkd"
            >
              <div
                className="sc-gsTCUz iZQOBB isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <div
                className="sc-bqyKva dHnJEw"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<nav
  className="sc-fubCfw bCQhlU Sidebar-resources"
>
  <div
    className="sc-pFZIQ"
  >
    <div>
      <div
        className="sc-fFubgz hIGdYH"
      >
        
      </div>
      <ul
        className="sc-bkzZxe jjCdaj"
      >
        <li
          className="sc-bdfBwQ sc-dQppl fKFkSC cvRQvE"
        >
          <a
            className="sc-jrAGrp sc-kEjbxe bcHXUh fOSgZM isSelected"
            href="/"
            onClick={[Function]}
          >
            <div
              className="sc-gsTCUz iZQOBB isNone"
            >
              <span>
                 
              </span>
            </div>
            <div
              className="sc-bqyKva sc-kstrdz dHnJEw elihkm"
            >
              <span
                className="sc-hBEYos jsLRUj"
              >
                All
              </span>
            </div>
          </a>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fFubgz hIGdYH"
      >
        resources
      </div>
      <ul
        className="sc-bkzZxe jjCdaj"
      />
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders list of resources 1`] = `
<nav
  className="sc-fubCfw bCQhlU Sidebar-resources"
>
  <div
    className="sc-pFZIQ"
  >
    <div>
      <div
        className="sc-fFubgz hIGdYH"
      >
        
      </div>
      <ul
        className="sc-bkzZxe jjCdaj"
      >
        <li
          className="sc-bdfBwQ sc-dQppl fKFkSC cvRQvE"
        >
          <a
            className="sc-jrAGrp sc-kEjbxe bcHXUh fOSgZM isSelected"
            href="/"
            onClick={[Function]}
          >
            <div
              className="sc-gsTCUz iZQOBB isNone"
            >
              <span
                className="sc-dlfnbm jAGXAl"
              >
                2
              </span>
            </div>
            <div
              className="sc-bqyKva sc-kstrdz dHnJEw elihkm"
            >
              <span
                className="sc-hBEYos jsLRUj"
              >
                All
              </span>
            </div>
          </a>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fFubgz hIGdYH"
      >
        resources
      </div>
      <ul
        className="sc-bkzZxe jjCdaj"
      >
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-jSgupP bujtng"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCssSg hOYBLG"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-jrAGrp bcHXUh  isBuilding"
            href="/r/vigoda"
            onClick={[Function]}
            title="vigoda"
          >
            <div
              className="sc-iqHYGH bHnIUA"
            >
              <div
                className="sc-gsTCUz iZQOBB isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-bqyKva sc-kstrdz dHnJEw elihkm"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  vigoda
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:36:07.000Z"
                  title="2017-12-21T15:36:07.000Z"
                >
                  &lt;5s ago
                </time>
              </span>
              <button
                className="sc-iBPRYJ duoIAk SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-crrsfI bEhhkd"
            >
              <div
                className="sc-gsTCUz iZQOBB isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <div
                className="sc-bqyKva dHnJEw"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-jSgupP bujtng"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCssSg hOYBLG"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-jrAGrp bcHXUh  isBuilding"
            href="/r/snack"
            onClick={[Function]}
            title="snack"
          >
            <div
              className="sc-iqHYGH bHnIUA"
            >
              <div
                className="sc-gsTCUz iZQOBB isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-bqyKva sc-kstrdz dHnJEw elihkm"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  snack
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:35:57.000Z"
                  title="2017-12-21T15:35:57.000Z"
                >
                  &lt;15s ago
                </time>
              </span>
              <button
                className="sc-iBPRYJ duoIAk SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-crrsfI bEhhkd"
            >
              <div
                className="sc-gsTCUz iZQOBB isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <div
                className="sc-bqyKva dHnJEw"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<nav
  className="sc-fubCfw bCQhlU Sidebar-resources"
>
  <div
    className="sc-pFZIQ"
  >
    <div>
      <div
        className="sc-fFubgz hIGdYH"
      >
        
      </div>
      <ul
        className="sc-bkzZxe jjCdaj"
      >
        <li
          className="sc-bdfBwQ sc-dQppl fKFkSC cvRQvE"
        >
          <a
            className="sc-jrAGrp sc-kEjbxe bcHXUh fOSgZM isSelected"
            href="/"
            onClick={[Function]}
          >
            <div
              className="sc-gsTCUz iZQOBB isNone"
            >
              <span
                className="sc-dlfnbm jAGXAl"
              >
                2
              </span>
            </div>
            <div
              className="sc-bqyKva sc-kstrdz dHnJEw elihkm"
            >
              <span
                className="sc-hBEYos jsLRUj"
              >
                All
              </span>
            </div>
          </a>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fFubgz hIGdYH"
      >
        resources
      </div>
      <ul
        className="sc-bkzZxe jjCdaj"
      >
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-jSgupP bujtng"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCssSg hOYBLG"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-jrAGrp bcHXUh  isBuilding"
            href="/r/vigoda"
            onClick={[Function]}
            title="vigoda"
          >
            <div
              className="sc-iqHYGH bHnIUA"
            >
              <div
                className="sc-gsTCUz iZQOBB isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-bqyKva sc-kstrdz dHnJEw elihkm"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  vigoda
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                —
              </span>
              <button
                className="sc-iBPRYJ duoIAk SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-crrsfI bEhhkd"
            >
              <div
                className="sc-gsTCUz iZQOBB isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <div
                className="sc-bqyKva dHnJEw"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-jSgupP bujtng"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCssSg hOYBLG"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-jrAGrp bcHXUh  isBuilding"
            href="/r/snack"
            onClick={[Function]}
            title="snack"
          >
            <div
              className="sc-iqHYGH bHnIUA"
            >
              <div
                className="sc-gsTCUz iZQOBB isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-bqyKva sc-kstrdz dHnJEw elihkm"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  snack
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                —
              </span>
              <button
                className="sc-iBPRYJ duoIAk SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-crrsfI bEhhkd"
            >
              <div
                className="sc-gsTCUz iZQOBB isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <div
                className="sc-bqyKva dHnJEw"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;
